[gd_scene load_steps=12 format=3 uid="uid://dsppxkyccjpcs"]

[ext_resource type="Script" uid="uid://b3g5atumyrird" path="res://systems/health/health.gd" id="1_0s2dn"]
[ext_resource type="Resource" uid="uid://byvfb5i4ltg7h" path="res://systems/time/frame_freeze_medium.tres" id="2_0yq67"]
[ext_resource type="Resource" uid="uid://iesh2ok5qwkx" path="res://systems/screen/camera_shake_small.tres" id="3_0n5ky"]
[ext_resource type="Resource" uid="uid://bh5mshmnnfxkh" path="res://systems/screen/camera_shake_long_death.tres" id="4_21sta"]
[ext_resource type="Script" uid="uid://bls4vce0lfvfc" path="res://elements/vfx/spawn_area.gd" id="5_s4oe8"]
[ext_resource type="PackedScene" uid="uid://ywymskkj85vs" path="res://elements/vfx/vfx_explosion/vfx_explosion.tscn" id="6_8dqoi"]
[ext_resource type="PackedScene" uid="uid://rib86ncyx8jd" path="res://elements/neutral/props/Factory/mesh/mesh_gate_factory.tscn" id="7_652co"]
[ext_resource type="Script" uid="uid://cr5xxhd04vkgu" path="res://addons/gap/api/accessibility_high_contrast_object.gd" id="8_pwfjr"]

[sub_resource type="GDScript" id="GDScript_qmsi6"]
script/source = "extends Node3D

@onready var health: Health = %Health

@export var override_health:bool;
@export var override_health_value:float;

func _ready() -> void:
	if override_health:
		health.set_max_health(override_health_value);
"

[sub_resource type="BoxShape3D" id="BoxShape3D_7s8uq"]
size = Vector3(4, 3, 1)

[sub_resource type="GDScript" id="GDScript_63bqp"]
script/source = "extends Node



func _on_health_dead_parameterless() -> void:
	Game.instance.kill_all_projectiles();
	HUD.instance.make_screen_effect(HUD.ScreenEffect.ShortFlash);
"

[node name="FactoryDoor" type="Node3D"]
script = SubResource("GDScript_qmsi6")

[node name="StaticBody3D" type="StaticBody3D" parent="." groups=["enemy_position"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
collision_layer = 4
collision_mask = 24

[node name="Health" type="Node" parent="StaticBody3D" node_paths=PackedStringArray("feedback") groups=["enemy_healths"]]
unique_name_in_owner = true
script = ExtResource("1_0s2dn")
max_amount = 7.0
feedback = [NodePath("../Graphic")]
frame_freeze_on_death = ExtResource("2_0yq67")
screen_shake_on_damaged = ExtResource("3_0n5ky")
screen_shake_on_death = ExtResource("4_21sta")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_7s8uq")

[node name="SpawnArea" type="VisibleOnScreenNotifier3D" parent="StaticBody3D"]
aabb = AABB(-1.9907, -1.44392, -1, 3.98141, 2.88785, 2)
script = ExtResource("5_s4oe8")
scenes = Array[PackedScene]([ExtResource("6_8dqoi")])
spawn_multiple_default = 18
spawn_multiple_default_duration = 0.45
spawn_multiple_default_trans = 1

[node name="Graphic" type="Node3D" parent="StaticBody3D"]

[node name="gate_factory" parent="StaticBody3D/Graphic" instance=ExtResource("7_652co")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -1.5, -0.02)

[node name="AccessibilityHighContrastObject" type="Node" parent="StaticBody3D/Graphic/gate_factory"]
script = ExtResource("8_pwfjr")
high_contrast_group = &"enemy"
metadata/_custom_type_script = "uid://cr5xxhd04vkgu"

[node name="Explode All Projectiles" type="Node" parent="."]
script = SubResource("GDScript_63bqp")

[node name="VisibleOnScreenEnabler3D" type="VisibleOnScreenEnabler3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0.25)
aabb = AABB(-2, -1.5, -0.25, 4, 3, 0.5)

[connection signal="dead_parameterless" from="StaticBody3D/Health" to="StaticBody3D/SpawnArea" method="do_spawn_default"]
[connection signal="dead_parameterless" from="StaticBody3D/Health" to="Explode All Projectiles" method="_on_health_dead_parameterless"]
[connection signal="do_spawn_finish" from="StaticBody3D/SpawnArea" to="." method="queue_free"]
